gatekeeper/constraints/allow-phuc776-ghcr.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImageRepos
metadata:
  name: allow-phuc776-ghcr
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    namespaces: ["demo", "payments"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    repos:
    - ghcr.io/phuc776/
